<resources>

    <string name="app_name">Care Plus</string>

    <!--common strings-->
    <!--buttons-->
    <string name="com_login">Login</string>
    <string name="com_sing_up">Sing Up</string>
    <string name="com_save">Save</string>
    <string name="com_submit">Submit</string>
    <string name="com_cancel">Cancel</string>
    <string name="com_update">Update</string>
    <string name="com_delete">Delete</string>
    <string name="com_add">Add</string>

    <string name="com_patient">Patient</string>
    <string name="com_prescription">Prescription</string>
    <string name="com_meal">Meal</string>
    <string name="com_workout">Workout</string>

    <!--text fealds-->
    <string name = "com_full_name">Full Name</string>
    <string name="com_dob">Date of Birth</string>
    <string name="com_phone">Phone</string>
    <string name="com_email">Email</string>
    <string name="com_create_pw">Create Password</string>
    <string name="com_confirm_pw">Confirm Password</string>
    <string name="com_forgot_pw">Forgot Password?</string>

    <!--pms strings-->
    <string name="pms_add_patient">Add Patient</string>
    <string name="pms_view_patient_list">Patient List</string>
    <string name="pms_add_clinical_record">Add Record</string>
    <string name="pms_bmi_calculator">BMI Calculator</string>
    <string name="pms_content_desc">Image View</string>
    <string name="pms_calculate">Calculate</string>
    <string name="pms_height">Height(Centimeters)</string>
    <string name="pms_weight">Weight(Kilograms)</string>
    <string name="pms_bmi_result">Your BMI is</string>
    <string name="pms_reset">Reset</string>
    <string name="pms_bed_no">Bed No</string>
    <string name="pms_action">Action</string>


    <string name="pms_add_patient_id">Patient ID</string>
    <string name="pms_add_patient_name">Patient Name</string>
    <string name="pms_add_patient_fname">First Name</string>
    <string name="pms_add_patient_lname">Last Name</string>
    <string name="pms_add_patient_dob">Date Of Birth</string>
    <string name="pms_add_patient_age">Age</string>
    <string name="pms_add_patient_guardian">Guardian Name</string>
    <string name="pms_add_patient_contact">Contact Number</string>
    <string name="pms_add_patient_Address">Address</string>
    <string name="pms_add_patient_reason">Reason for Stay</string>
    <string name="pms_add_patient_admit">Admitted Date</string>
    <string name="pms_add_patient_additional">Additional Info</string>

    <!-- hints-->
    <string name="pms_hint_patient_id">Patient Id</string>
    <string name="pms_hint_patient_name">Patient Name</string>
    <string name="pms_hint_patient_date">Date</string>
    <string name="pms_hint_patient_bp">Blood Pressure</string>
    <string name="pms_hint_patient_diagnosis">Diagnosis</string>
    <string name="pms_hint_patient_other">Others</string>

    <!--check box -->

    <string name="pms_check_box">I herby certify that the patient has diagnoised properly by me</string>





    <!--mms strings-->
    <string name="mms_meal_planner">Meal Planner</string>
    <string name="mms_add_new_plan">Add new meal plan</string>
    <string name="mms_view_planned_meals">View meal plans</string>
    <string name="mms_measure_nutrients">Supplement manager</string>

    <!--add new meal plan-->
    <string name="mms_new_meal_plan">New meal plan</string>
    <string name="mms_select_patient_type">Patient type</string>
    <string name="mms_select_day">Day of week</string>
    <string name="mms_select_breakfast">Breakfast</string>
    <string name="mms_select_lunch">Lunch</string>
    <string name="mms_select_dinner">Dinner</string>
    <string name="mms_select_plan_name">Plan name</string>

    <string name="mms_breakfast">Breakfast</string>
    <string name="mms_lunch">Lunch</string>
    <string name="mms_dinner">Dinner</string>


    <!--Supplement manger form-->
    <string name="mms_select_supplement">Supplement code here</string>
    <string name="mms_supplement_code">Supplement code</string>
    <string name="mms_supplement_name">Supplement name</string>
    <string name="mms_show">Show</string>
    <string name="mms_sp1">Show</string>
    <string name="mms_sp2">Show</string>
    <string name="mms_sp3">Show</string>
    <string name="mms_sp4">Show</string>
    <string name="mms_sp5">Show</string>

       <!--mms end-->


    <!--wms strings-->


    <!--login lables-->
    <!--prms strings-->
    <string name="login_lbl">Care Plus Login</string>
    <string name="login_user_name">User Name</string>
    <string name="login_password">Password</string>
    <string name="prms_dashboard_labal">Care Plus - Dashboard</string>
    <string name="prms_add_pres_labal">Care Plus - New Prescription</string>
    <string name="prms_search_patient">Search</string>
    <string name="prms_radio_morning">Morning</string>
    <string name="prms_radio_day">Day</string>
    <string name="prms_radio_night">Night</string>

    <string name="prms_lbl_patient_name">Name</string>
    <string name="prms_lbl_patient_dob">DOB</string>
    <string name="prms_lbl_patient_admit_date">Admit Date</string>
    <string name="prms_lbl_patient_reason">Reason</string>
    <string name="prms_drug_name_table">Drug Name</string>
    <string name="prms_drug_dose_table">Dose</string>
    <string name="prms_before_meal">Before Meal</string>
    <string name="prms_add_addEntity">Add Entity</string>

    <string name="prms_doc_add_name">Doctor Name</string>
    <string name="prms_doc_add_moh_number">MOH Number</string>
    <string name="prms_doc_description">Description</string>
    <string name = "prms_view_age">Age</string>

    <!--view-->
    <string name="prms_view_presc_lable">Care Plus - View Prescription</string>

    <string name="prms_delete_presc_lable">Care Plus - Delete Prescription</string>

    <string name="prms_reallocate_presc_lable">Care Plus - Reallocate Prescription</string>

    <string name="prms_update_presc_lable">Care Plus - Update Prescription</string>

</resources>