<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mms.Mms_updateEntry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mms_empty_bg"
        tools:context=".mms.Mms_addNewPlan">

        <TextView
            android:id="@+id/txtMainCard"
            android:layout_width="335dp"
            android:layout_height="525dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="108dp"
            android:background="@drawable/mms_card_main"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/updatePlanName"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/mms_select_plan_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtMainCard"
            app:layout_constraintTop_toTopOf="@+id/txtMainCard" />

        <EditText
            android:id="@+id/updateDay"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="160dp"
            android:ems="10"
            android:hint="@string/mms_select_day"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtMainCard"
            app:layout_constraintTop_toTopOf="@+id/txtMainCard" />

        <EditText
            android:id="@+id/updateBreakfast"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="228dp"
            android:ems="10"
            android:hint="@string/mms_select_breakfast"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtMainCard"
            app:layout_constraintTop_toTopOf="@+id/txtMainCard" />

        <EditText
            android:id="@+id/updateLunch"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="280dp"
            android:ems="10"
            android:hint="@string/mms_select_lunch"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtMainCard"
            app:layout_constraintTop_toTopOf="@+id/txtMainCard" />

        <EditText
            android:id="@+id/updateDinner"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="332dp"
            android:ems="10"
            android:hint="@string/mms_select_dinner"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtMainCard"
            app:layout_constraintTop_toTopOf="@+id/txtMainCard" />

        <EditText
            android:id="@+id/updatePatientType"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="88dp"
            android:ems="10"
            android:hint="@string/mms_select_patient_type"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtMainCard"
            app:layout_constraintTop_toTopOf="@+id/txtMainCard" />

        <Button
            android:id="@+id/btnCancelUpdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="232dp"
            android:layout_marginLeft="232dp"
            android:layout_marginTop="544dp"
            android:text="@string/com_cancel"
            app:backgroundTint="@color/com_color_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/button9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnUpdatePlan"
            android:layout_width="105dp"
            android:layout_height="51dp"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="544dp"
            android:text="@string/com_update"
            app:backgroundTint="@color/com_color_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>