<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_patient"
                android:layout_width="120dp"
                android:layout_height="118dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/com_patient"
                app:backgroundTint="@color/com_color_teal" />

            <Button
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="118dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="start_prms"
                android:text="@string/com_prescription"
                app:backgroundTint="@color/com_color_teal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMeal"
                android:layout_width="120dp"
                android:layout_height="118dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/com_meal"
                app:backgroundTint="@color/com_color_teal" />

            <Button
                android:id="@+id/button4"
                android:layout_width="120dp"
                android:layout_height="118dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="goToWmsDashboard"
                android:text="@string/com_workout"
                app:backgroundTint="@color/com_color_teal" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>