<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mms_empty_bg"
    tools:context=".mms.Mms_addNewPlan">

    <TextView
        android:id="@+id/txtMainCard"
        android:layout_width="335dp"
        android:layout_height="525dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/mms_card_main"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBreakfast"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="400dp"
        android:text="@string/mms_select_breakfast"
        app:backgroundTint="@color/mms_color_ash_light"
        app:layout_constraintBottom_toBottomOf="@+id/btnDinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/btnLunch"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="400dp"
        android:text="@string/mms_select_lunch"
        app:backgroundTint="@color/mms_color_ash_mid"
        app:layout_constraintBottom_toBottomOf="@+id/btnDinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/btnDinner"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="368dp"
        android:text="@string/mms_select_dinner"
        app:backgroundTint="@color/mms_color_ash_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancelMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginTop="548dp"
        android:text="@string/com_cancel"
        app:backgroundTint="@color/com_color_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="548dp"
        android:text="@string/com_save"
        app:backgroundTint="@color/com_color_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectPatient"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="184dp"
        android:gravity="start"
        android:text="@string/mms_select_patient_type"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="272dp"
        android:gravity="start"
        android:text="@string/mms_select_date"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>