<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pms_backg_one_1"
    tools:context=".PMS.Pms_add_clinical_record">


    <TextView
        android:id="@+id/pms_sample_editC"
        android:layout_width="346dp"
        android:layout_height="602dp"
        android:background="@drawable/pms_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <EditText
        android:id="@+id/pms_add_clinical_txt_p_bp"
        android:layout_width="287dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:hint="@string/pms_hint_patient_bp"
        android:inputType="numberDecimal"
        android:textColor="@color/com_color_teal"
        android:textColorHint="@color/com_color_teal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pms_add_clinical_txt_p_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <EditText
        android:id="@+id/pms_add_clinical_txt_p_bgluc"
        android:layout_width="287dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:hint="Blood Glucose"
        android:inputType="number"
        android:textColor="@color/com_color_teal"
        android:textColorHint="@color/com_color_teal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pms_add_clinical_txt_p_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <EditText
        android:id="@+id/pms_add_clinical_txt_p_id"
        android:layout_width="289dp"
        android:layout_height="44dp"
        android:hint="@string/pms_hint_patient_id"
        android:inputType="number"
        android:textColor="@color/com_color_teal"
        android:textColorHint="@color/com_color_teal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <EditText
        android:id="@+id/pms_add_clinical_txt_p_date"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/pms_hint_patient_date"
        android:inputType="text"
        android:textColor="@color/com_color_teal"
        android:textColorHint="@color/com_color_teal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="@+id/pms_add_clinical_txt_p_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <EditText
        android:id="@+id/pms_add_clinical_txt_p_diag"
        android:layout_width="289dp"
        android:layout_height="125dp"
        android:hint="@string/pms_hint_patient_diagnosis"
        android:textColor="@color/com_color_teal"
        android:textColorHint="@color/com_color_teal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pms_add_clinical_txt_p_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <CheckBox
        android:id="@+id/pms_add_clinical_checkbox"
        android:layout_width="326dp"
        android:layout_height="58dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/pms_check_box"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/pms_sample_editC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/pms_add_clinic_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_save"
        app:backgroundTint="@color/com_color_save"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/pms_add_clinic_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_cancel"
        app:backgroundTint="@color/com_color_delete"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />


</androidx.constraintlayout.widget.ConstraintLayout>